# noisy

./: Cargo.toml  README.md  output.txt
src/: lib.rs  main.rs  noise.rs  perlin.rs  permutation_table.rs  utils.rs
src/core/: perlin.rs  white.rs
src/utils/: noise_image.rs
