[package]
name = "noisy"
version = "0.1.0"
authors = ["Abby Grobbel <aegrobbel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. Requires
# all the `std::fmt` and `std::panicking` infrastructure
console_error_panic_hook = { version = "0.1.7", optional = true }
image = "0.25.5"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
